--- a/css/main.css
+++ b/css/main.css
@@ -61,14 +61,32 @@ footer {
     font-size: .75em;
 }
 
-#content {
-        text-align: center;
-}
+
 /****************** about page ****************/
 
 /****************** collection page ***********/
 
 /****************** writings ******************/
+
+
+#content {
+/*    text-align: center;*/
+    margin: auto 10% auto 10%;
+    line-height: 1.8em;
+}
+
+.post_title {
+    font-size: 2.2em;
+    color: rgba(255, 20, 20, 0.68);
+    margin: 1em auto;/* 10px / 16px */
+}
+
+#content p {
+    font-size: 1.3em;
+}
+#content img {
+    width: 100%;
+}
 
 /******************* home *********************/
 #about {
