added layout css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,3 @@
 <header>
-    <div id="top_nav">
-        <ul id="main_nav">
-            <li id="logo"><a href="/index.html">abdulRaoof</a></li>
-            <li><a href="/writings.html">Writings</a></li>
-            <li><a href="/collection.html">Collection</a></li>
-            <li><a href="/about.html">About</a></li>
-        </ul>
-    </div>
+    <span id="logo"><a href="/index.html">abdulRaoof</a></span>
 </header>
