--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 {% include head.html %}
-{% include header.html %}
-<div id="content">
-    {{ content }}
-</div>
-{% include footer.html %}
+<body>
+    {% include header.html %}
+    <div id="content">
+        {{ content }}
+    </div>
+    {% include nav.html %}
+    {% include footer.html %}
+</body>
