--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <! doctype html>
 <html>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link href="/css/reset.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <title> {{site.title}} </title>
