--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,4 +6,5 @@
     </div>
     {% include nav.html %}
     {% include footer.html %}
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 </body>
