--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-/*************** header ****************/
+/************************ header **************************/
 header {
     padding: 1.25em 1.25em;
     border-bottom: 1px solid rgba(238, 238, 238, 0.9);
@@ -24,7 +24,8 @@ nav {
     right: 5%;
 }
 
-nav h1 {
+header #menu {
+    display: none;
 }
 
 nav ul {
@@ -113,12 +114,47 @@ footer {
 }
 
 /****************************Media Queries *****************************/
+
+@media(max-width: 800px){
+    #logo{
+        display: block;
+        text-align: center;
+    }
+    nav {
+        padding: 0;
+        top: 4.5625em;
+        right: 0;
+        left: 0;
+    }
+    nav ul {
+        display: block;
+        text-align: center;
+    }
+    nav ul li {
+        font-size: 1.5em;
+    }
+    nav ul li:last-child{
+        padding-right: .625em;
+    }
+    
+    #content{
+        margin-top: 4.5em;
+        margin-left: 0;
+        margin-right: 0;        
+    }
+}
+
 @media(max-width: 480px){
     body, header, content, nav {
         width: 100%;
         margin: auto 0;
-        padding: auto 0;
+        padding-left: 0px;
         text-align: auto;
+    }
+    
+    header #logo {
+        text-align: left;
+        margin-left: 3%;
     }
     nav {
         position: static;
@@ -140,34 +176,28 @@ footer {
     nav ul li a {
         color: #fff;
     }
-    
+    #content{
+        margin-left: 3%;
+        margin-right: 3%;
+        margin-top: 0;
+    }
+    #about {
+        margin-top: 1.5em;
+    }
+    header #menu {
+        display: block;
+        position: absolute;
+        right: 3%;
+        top: .75em;
+        font-size: 1.5em;
+        background: #144;
+        padding: .25em;
+        color: #fff;
+        border-radius: 3px;
+    }
+
 }
 
-@media(max-width: 800px){
-    #logo{
-        display: block;
-        text-align: center;
-    }
-    nav {
-        padding: 0;
-        width: 90%;
-        top: 4.5625em;
-    }
-    nav ul {
-        display: block;
-        text-align: center;
-    }
-    nav ul li {
-        font-size: 1.5em;
-    }
-    nav ul li:last-child{
-        padding-right: .625em;
-    }
-    
-    #content{
-        margin-top: 4.5em;
-    }
-}
 
 
 
