--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,7 @@ footer {
         width: 100%;
         margin: auto 0;
         padding-left: 0px;
+        padding-right: 0px;
         text-align: auto;
     }
     
