--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
 /************************ header **************************/
 header {
     padding: 1.25em 1.25em;
-    border-bottom: 1px solid rgba(238, 238, 238, 0.9);
+    border-bottom: 3px solid rgba(238, 238, 238, 0.9);
 }
 #logo {
     color: rgba(79, 68, 68, 0.9);
@@ -85,7 +85,10 @@ footer {
     font-size: 1.3em;
 }
 #content img {
-    width: 100%;
+    margin:1.25em -10%;
+    max-width: 120%;
+    box-shadow: 0 10px 6px -6px #777;
+    border: 1px solid #eee;
 }
 
 /******************* home *********************/
