--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ footer {
         background: #143; 
         margin: 0;
         padding: 0;
-        width: 100%;
+        width: calc(100% + 2.5em);
     }
     nav ul {
     }
