--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,7 @@ footer {
     }
     #content img {
         margin:1.25em 0%;
-        width: 100%;
+/*        width: 100%;*/
         
     }
     #about {
