--- a/css/main.css
+++ b/css/main.css
@@ -190,8 +190,9 @@ footer {
         margin-top: 0;
     }
     #content img {
-        margin:1.25em 3% 1.25em -3%;
+        margin:1.25em 0px;
         width: 106%;
+        left: -3%;
         
     }
     #about {
