--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-    <span id="logo"><a href="/index.html">abdulRaoof</a></span>
+    <span id="logo"></span>
     <span id="menu">MENU</span>
 </header>
