--- a/css/main.css
+++ b/css/main.css
@@ -1,66 +1,78 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
+
 
 body {
-    width: 90%;
-    padding-left: 5%;
-    font-family: 'Open Sans', sans-serif;
+    width: 100%;
 }
 
 /************************ header **************************/
 header {
-    padding: 1.25em 1.25em;
-    border-bottom: 3px solid rgba(238, 238, 238, 0.9);
+    height: 6.25em;
+    background: #e91e63;
+    position: relative;
+    font-family: 'Roboto', sans-serif;
 }
 #logo {
-    color: rgba(79, 68, 68, 0.9);
-    font-size: 2em;
-}
-
-nav {
-    padding-bottom: 0.625em; /* 10px /16px */;
-    margin-bottom: 0.625em; /* 10px / 16px */
+    border-radius: 50%;
+    border: solid 4px #e0f7fa;
+    height: 3.125em;
+    width: 3.125em;
     position: absolute;
-    top: 0;
-    right: 5%;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 3.333333333333333%;
 }
 
 header #menu {
-    display: none;
+    position: absolute;
+    border: solid 4px #e0f7fa;
+    border-radius: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 3.333333333333333%;
+    padding: 1em;
+    font-size: 3.333333333333333% 1.5em;
+    color: #fff;
+
 }
 
+nav {
+    background: #e91e63;
+}
 nav ul {
-    margin: 0;
-    padding: 0;
-    text-align: right;
     list-style: none;
+    text-align: center;
 }
 
 nav ul li {
-    padding: 0.625em 0.625em 0.625em 0.625em;
-    display: inline-block;
-    color: rgba(79, 68, 68, 0.9);
-    font-size: 2em;
+    padding-top: 1.5em;
 }
 
 nav ul li:last-child{
-    padding-right: 0;
+    padding-bottom: 1.5em;
 }
 
-nav ul li a, #logo a {
-    color: rgba(12, 12, 12, 0.68);
+nav ul li a {
+    color: #fff;
     text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5em;
 }
 
 /****************** footer ********************/
 
 footer {
-    border-top: 1px solid rgba(238, 238, 238, 0.9);
     text-align: center;
-    padding: 0.625em 0px 0.625em 0px;
-    margin: 0.625em 0px 0.625em 0px;
-    font-size: .75em;
 }
 
+footer p {
+    font-family: 'Roboto', sans-serif;
+    color: #212121;
+    font-size: .75em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
 
 /****************** about page ****************/
 
@@ -70,147 +82,129 @@ footer {
 
 
 #content {
-/*    text-align: center;*/
-    margin: auto 10%;
-    line-height: 1.8em;
+    width: 93.33333333333333%;
+    margin: 2em 3.333333333333333% 1.5em 3.333333333333333%;
+    font-family: 'Roboto Slab', serif;
+    color: #212121;
+}
+.page_date {
+    font-weight: bold;
+    font-size: 1em;
+    padding: 1em 0 0.5em 0px;
 }
 
 .page_title {
-    font-size: 2.2em;
-    color: rgba(255, 20, 20, 0.68);
-    margin: 0.3 auto .5em auto;/* 10px / 16px */
-}
-.page_date {
-    font-size: 1.1em;
-    color: rgba(150, 150, 150, 1);
-    margin: 1em auto 0 auto;/* 10px / 16px */
+    color: #e53935;
+    font-size: 1.75em;
+    padding: 0 0 0.5em 0px;
 }
 
 #content p {
-    font-size: 1.3em;
+    font-size: 1em;
+    color: #333;
+    font-weight: 400;
+    line-height: 1.6em;
+    margin-bottom: 1.25em;
+}
+#content p::first-letter  {
+    font-size: 1.75em;
+    font-weight: bold;
 }
 #content img {
-    margin:1.25em -10%;
-    max-width: 120%;
-    box-shadow: 0 10px 6px -6px #777;
-    border: 1px solid #eee;
+    width: 100%;
+    margin-bottom: 1.25em;
 }
 
 /******************* home *********************/
 #about {
-    line-height: 2em;
-    font-size: 1.2em;
-    margin: 1.5em 0 0 0;
+
 }
 
 #posts_list {
-    margin: 1.5em 0 1.5em 0;
 }
 
 #posts_list h2 {
-    margin: 0 0 1em 0;
-    font-size: 2em;
-    color: rgba(255, 20, 20, 0.68);
 }
 
 #posts_list ul {
-    list-style: none;
 }
 
 #posts_list ul li {
-    margin: 0 0 1em 0;
 }
 
 /****************************Media Queries *****************************/
 
-@media(max-width: 800px){
-    #logo{
-        display: block;
-        text-align: center;
+@media(min-width: 30em){
+    #menu {
+        display: none;
     }
     nav {
-        padding: 0;
-        top: 4.5625em;
-        right: 0;
-        left: 0;
-    }
-    nav ul {
-        display: block;
-        text-align: center;
+        position: absolute;
+        background: none;
+        top: 2.375em; 
+        right: 1.5em;
     }
     nav ul li {
-        font-size: 1.5em;
+        display: inline-block;
+        padding: 0;
+        margin: 0;
+        padding: 0 0 0 2em;
     }
     nav ul li:last-child{
-        padding-right: .625em;
+        padding: 0 0 0 2em;
     }
-    
-    #content {
-        margin-top: 4.5em;
-        margin-left: 0;
-        margin-right: 0;        
+    footer {
+        background: #e91e63;
     }
-    #content img {
-        margin:1.25em -1.25em;
-        width: calc(100% + 2.5em);
+    footer p {
+        color: #fff;
     }
 }
 
-@media(max-width: 480px){
-    body, header, content, nav {
-        width: 100%;
-        margin: auto 0;
-        padding-left: 0px;
-        padding-right: 0px;
-        text-align: auto;
-    }
-    
+@media(min-width: 50em){ 
     header #logo {
-        text-align: left;
-        margin-left: 3%;
+        margin-left: 6.666666666666666%;
     }
-    nav {
-        position: static;
-        background: #143; 
-        margin: 0;
-        padding: 0;
-        width: 100%;
-    }
-    nav ul {
-    }
-    nav ul li {
-        display: block;
-        text-align: center;
-        padding:0 0 0.5em 0;
-    }
-    nav ul li:first-child{
-        padding-top: 0.5em;
-    }
-    nav ul li a {
-        color: #fff;
+    nav ul li a:hover {
+        border-bottom: 3px solid #fff;
     }
     #content{
-        margin-left: 3%;
-        margin-right: 3%;
-        margin-top: 0;
+        width: 80%;
+        margin: 0 auto;
     }
-    #content img {
-        margin:1.25em 0px;
-        width: 100%;
-    }
-    #about {
-        margin-top: 1.5em;
-    }
+
     header #menu {
-        display: block;
-        position: absolute;
-        right: 3%;
-        top: .75em;
+        margin-right: 6.666666666666666%;
+    }
+        footer {
+        background: #fff;
+        border-top: 1px solid #ddd;
+    }
+    footer p {
+        color: #000;
+    }
+   .page_date  {
+        font-weight: bold;
         font-size: 1.5em;
-        background: #144;
-        padding: .25em;
-        color: #fff;
-        border-radius: 3px;
+        padding: 1em 0 0.5em 0px;
+    }
+
+    .page_title {
+        color: #e53935;
+        font-size: 2.25em;
+        padding: 0 0 0.5em 0px;
+    }
+    #content p {
+        font-size: 1.25em;
+        color: #333;
+        font-weight: 400;
+        line-height: 1.6em;
+        margin-bottom: 1.25em;
+    }
+    #content p::first-letter  {
+        font-size: 1.75em;
+        font-weight: bold;
+
     }
 }
 
