--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav> 
     <ul>
-        <li><a href="/writings.html">Writings</a></li>
-        <li><a href="/collection.html">Collection</a></li>
-        <li><a href="/about.html">About</a></li>
+        <li><a href="/writings.html">WRITINGS</a></li>
+        <li><a href="/collection.html">COLLECTION</a></li>
+        <li><a href="/about.html">ABOUT</a></li>
     </ul>
 </nav>
