--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <body>
     {% include header.html %}
     <div id="content">
-        <h4 class="page_date">{{ page.date | date: '%B %d, %Y' }}</h4>
+        <h4 class="page_date">{{ page.date | date_to_string }}</h4>
         <h2 class="page_title">{{ page.title }}</h2>
         {{ content }}
     </div>
