added about, updated style sheet for home

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,7 @@
     <meta name="viewport" content="width=max-width, initial-scale=1">
     <link href="/css/reset.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
+    <link media="(min-width: 30em)" href="/css/tablet.css" rel="stylesheet">
+    <link media="(min-width: 50em)" href="/css/desktop.css" rel="stylesheet">
     <title> {{site.title}} </title>
 </html>
