--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-    <span id="logo"></span>
+    <a href="/index.html"><span id="logo"></span></a>
     <span id="menu">MENU</span>
 </header>
