--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ nav ul {
 
 nav ul li {
     padding: 0.75em 0;
-    border-bottom: 1px solid rgba(200,200,200,0.5);
+    border-bottom: 1px solid rgba(200,200,200,0.2);
 }
 
 nav ul li:last-child{
@@ -105,14 +105,15 @@ footer p a {
 }
 
 .page_title {
-    color: #6200EA;
+    color: #311B92;
     font-size: 1.75em;
     padding: 0 0 0.5em 0;
+    text-transform: uppercase;
 }
 
-#content #post p, #content #about p {
+#content #post p, #content #posts_list p {
     font-size: 1.2em;
-    color: #333;
+    color: #37474F;
     font-weight: 200;
     line-height: 1.6em;
     margin-bottom: 1.25em;
@@ -130,7 +131,7 @@ footer p a {
 }
 .post_excerpt p.test {
     font-size: 1em;
-    color: #333;
+    color: #37474F;
     font-weight: 200;
     line-height: 1.6em;
     margin-bottom: 1.25em;
@@ -140,9 +141,9 @@ footer p a {
 #content #about {
     
 }
-#content #about p {
+#content #posts_list p {
     font-size: 1.2em;
-    color: #333;
+    color: #37474F;
     font-weight: 200;
     line-height: 1.6em;
 }
@@ -151,9 +152,12 @@ footer p a {
 }
 
 #posts_list h2 {
-    color: #6200EA;
-    font-size: 2.5em;
-    padding: 0 0 0.5em 0;
+    color: #311B92;
+    font-size: 3em;
+    padding: 0 0 0 0;
+    text-transform: uppercase;
+    font-weight: 400;
+    
 }
 
 #posts_list ul {
@@ -168,7 +172,7 @@ footer p a {
 }
 #posts_list ul li a{
     font-size: 1.5em;
-    color: #333;
+    color: #37474F;
     font-weight: 200;
     line-height: 1em;
     margin-bottom: 1.25em;
