--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 
 body {
     width: 100%;
+    height: 100%;
 }
 
 /************************ header **************************/
@@ -205,11 +206,14 @@ footer p a {
 #reach_out li {
     margin-bottom: 1em;
     display: inline-block;
+    
 }
 
 #reach_out li a img {
     margin-bottom: 0.5em;
-    width: 90%;
+    width: 70%;
+
+
 }
 
 #reach_out li a {
@@ -218,6 +222,9 @@ footer p a {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     color: #673ab7;
+    text-align: center;
+}
+#reach_out li a span {
 }
 /****************************Media Queries *****************************/
 
