fixed logo positioning for r tablet

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -5,7 +5,7 @@ header {
     border: solid 4px #ffffff;
     height: 3.125em;
     width: 3.125em;
-    bottom: 1.34375em;
+    top: 1.34375em;
 }
 header #menu {
 }
