--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer>
     <p>abdulraoof.com is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons License</a>.</p>
 </footer>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="/js/main.js"></script>
