--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
+/*@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);*/
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif);
 
 body {
