--- a/css/desktop.css
+++ b/css/desktop.css
@@ -42,11 +42,27 @@ footer p a {
     line-height: 1.6em;
     margin-bottom: 1.25em;
 }
-#content #post p::first-letter  {
-    font-size: 1.75em;
-    font-weight: bold;
+#content #post h3 {
+    font-size: 2em;
 }
 
+#content #post h4 {
+    font-size: 1.75em;
+    font-weight: 400;
+}
+ol li {
+    font-size: 1.5em;
+}
 #posts_list h2 {
     font-size: 3em;
+}
+ol {
+    list-style: decimal;
+    font-size: 1em;
+    color: #37474F;
+    margin:  1em auto 1em 10%;
+}
+ol li {
+    margin-bottom: 0.5em;
+    line-height:1.6em; 
 }
