--- a/css/desktop.css
+++ b/css/desktop.css
@@ -42,6 +42,16 @@ footer p a {
     line-height: 1.6em;
     margin-bottom: 1.25em;
 }
+
+.quote {
+    font-size: 2em;
+    font-style: italic;
+    line-height: 1.8em;
+    color: #37474F;
+    margin-bottom: 1.25em;
+    border-left: solid .25em #999;
+    padding-left: 1em;
+}
 #content #post h3 {
     font-size: 2em;
 }
