--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav> 
     <ul>
-        <li><a href="/writings.html">WRITINGS</a></li>
+        <li><a href="/writings.html">ARTICLES</a></li>
         <li><a href="/collection.html">COLLECTION</a></li>
         <li><a href="/about.html">ABOUT</a></li>
     </ul>
