--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,6 @@
-<nav> 
-    <ul>
-        <li><a href="/writings.html">ARTICLES</a></li>
-        <li><a href="/collection.html">COLLECTION</a></li>
-        <li><a href="/about.html">ABOUT</a></li>
-    </ul>
-</nav>
+<nav>
+	<ul>
+		<li><a href="{{site.baseurl}}/writings.html">Writings</a></li>
+		<li><a href="{{site.baseurl}}/bio.html">Bio</a></li>
+		<li><a href="{{site.baseurl}}/works.html">Works</a></li>
+	</ul>
