--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
 </head>
 <body>
-<header>
-<img src="">
-	{% include nav.html %}
-</header>
-
-{{content}}
-
-<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>
+	<div class="container">
+		<header>
+			<img src="{{site.baseurl}}/assets/logo/logo-64.png">
+			{% include nav.html %}
+		</header>
+		{{content}}
+	</div>
+	<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>
 </body>
 </html>
