--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@
 $primary-font: 'Merriweather', serif ;
 $secondary-font: 'Merriweather Sans', sans-serif;
 $pad: 20px;
+$type-color: #333;
 
 /* Grid system*/
 
@@ -65,7 +66,7 @@ margin: 0 0 $pad 0;
 }
 
 .container {
-  width: 100%;
+  max-width: 66.66%;
   margin: 0 auto; 
 }
 
@@ -79,18 +80,19 @@ body {
   font-family: $primary-font;
   font-weight: 400;
   line-height: 1.45;
-  color: #333;
+  color: $type-color;
 }
 
 h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
-  font-weight: inherit;
+  font-weight: 600;
   line-height: 1.2;
 }
 
 h1 {
   margin-top: 0;
   font-size: 6.854em;
+  font-family: $secondary-font;
 }
 
 h2 {font-size: 4.236em;}
@@ -100,11 +102,45 @@ h3 {font-size: 2.618em;}
 h4 {font-size: 1.618em;}
 
 p {
-  font-size: 1.2em;
+  font-size: 1em;
   margin-bottom: 1.3em;
 }
 
+.hero-para{
+  font-size: 1.236em;
+  margin-bottom: .6em;
+  line-height: 1.5;
+}
 
 small, .font_small {font-size: 0.618em;}
 
+.seconday-type {
+  font-family: $secondary-font;
+}
 
+nav{
+  font-family: $secondary-font;
+  padding: 3em 0 .75em 0;
+  ul{
+    li {
+      font-size: .8em;
+      display: inline-block;
+      padding: 0 .75em 0 0;
+      &:last-child{
+        padding-right: 0;
+      }
+      a {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: 600;
+        color: $type-color;
+      }
+    }
+  }
+
+}
+
+header {
+  margin: 6em  0 3em 0;
+  border-bottom: 1px solid #eee;
+}
