--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,7 @@ $primary-font: 'Merriweather', serif ;
 $secondary-font: 'Merriweather Sans', sans-serif;
 $pad: 20px;
 $type-color: #333;
+$break-small: 480px;
 
 /* Grid system*/
 
@@ -68,6 +69,9 @@ margin: 0 0 $pad 0;
 .container {
   max-width: 66.66%;
   margin: 0 auto; 
+  @media screen and (max-width: $break-small){
+    max-width: 90%;
+  }
 }
 
 
