--- a/css/main.scss
+++ b/css/main.scss
@@ -69,7 +69,7 @@ margin: 0 0 $pad 0;
 .container {
   max-width: 66.66%;
   margin: 0 auto; 
-  @media screen and (max-width: $break-small){
+  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     max-width: 90%;
   }
 }
