--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Guided Fantasy : Web home of abdul raoof</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
 </head>
