--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,15 @@
 			{% include nav.html %}
 		</header>
 		{{content}}
+		<footer>
+			<nav>
+				 <ul>
+				 	<li><a href="#">instgram</a></li>
+				 	<li><a href="#">twitter</a></li>
+				 	<li><a href="#">linkedin</a></li>
+				 </ul>
+			 </nav>
+		</footer>
 	</div>
 	<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>
 </body>
