--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -1,5 +1,7 @@
 /* Grid system*/
 
+$pad: 20px;
+
 * {
   box-sizing: border-box;
 }
@@ -21,6 +23,7 @@ margin: 0 0 $pad 0;
     padding-right: 0;
   }
 }
+
 
 .col-2-3 {
   width: 66.66%;
@@ -47,5 +50,13 @@ margin: 0 0 $pad 0;
   padding: $pad 0 $pad $pad;
   [class*='col-']:last-of-type {
     padding-right: $pad;
+  }
+}
+
+.container {
+  max-width: 66.66%;
+  margin: 0 auto; 
+  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    max-width: 90%;
   }
 }
