--- a/css/main.scss
+++ b/css/main.scss
@@ -9,71 +9,11 @@
 
 $primary-font: 'Merriweather', serif ;
 $secondary-font: 'Merriweather Sans', sans-serif;
-$pad: 20px;
 $type-color: #333;
 $break-small: 480px;
 
-/* Grid system*/
 
-* {
-  box-sizing: border-box;
-}
-
-.grid {
-background: white;
-margin: 0 0 $pad 0;
-  &:after {
-  content: "";
-  display: table;
-  clear: both;
-  }
-}
-
-[class*='col-'] {
-  float: left;
-  padding-right: $pad;
-  .grid &:last-of-type {
-    padding-right: 0;
-  }
-}
-
-
-.col-2-3 {
-  width: 66.66%;
-}
-
-.col-1-3 {
-  width: 33.33%;
-}
-
-.col-1-2 {
-  width: 50%;
-}
-
-.col-1-4 {
-  width: 25%;
-}
-
-.col-1-8 {
-  width: 12.5%;
-}
-
-/* Opt-in outside padding */
-.grid-pad {
-  padding: $pad 0 $pad $pad;
-  [class*='col-']:last-of-type {
-    padding-right: $pad;
-  }
-}
-
-.container {
-  max-width: 66.66%;
-  margin: 0 auto; 
-  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    max-width: 90%;
-  }
-}
-
+@import 'grid';
 
 /* Typography */
 
@@ -147,4 +87,21 @@ nav{
 header {
   margin: 6em  0 3em 0;
   border-bottom: 1px solid #eee;
+}
+
+footer {
+  @extend header;
+  margin-bottom: 6em;
+
+  nav {
+    float: right;
+    ul {
+      li{
+        a{
+          font-size: .75em;
+          color: #555;
+        }
+      }
+    }
+  }
 }
