--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 		{{content}}
 		<footer>
 			<nav>
+				<small>&copy;2016 abdul raoof</small>
 				 <ul>
 				 	<li><a href="#">instgram</a></li>
 				 	<li><a href="#">twitter</a></li>
