--- a/css/main.scss
+++ b/css/main.scss
@@ -57,7 +57,7 @@ p {
 }
 
 small, .font_small {
-  font-size: 0.8em;
+  font-size: 0.618em;
   text-transform: uppercase;
   font-family: $secondary-font;
   letter-spacing: 1px;
@@ -81,6 +81,7 @@ nav{
       }
       a {
         @extend small;
+        font-size: 0.8em;
         text-decoration: none;
       }
     }
@@ -105,10 +106,12 @@ footer {
     ul {
       float: right;
       li{
+        padding: 0;
         a{
           @extend small;
           color: #666;
           font-weight: 600;
+          font-size: 0.618em;
         }
       }
     }
