--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 				 	/
 				 	<li><a href="#">linkedin</a></li>
 				 </ul>
- 				<small>&copy;2016 abdul raoof</small>
+ 				<span>&copy;2016 abdul raoof</span>
 			 </nav>
 		</footer>
 	</div>
