--- a/css/main.scss
+++ b/css/main.scss
@@ -99,8 +99,12 @@ nav{
 }
 
 header {
-  margin: 6em  0 3em 0;
+  margin: 3em  0 3em 0;
   border-bottom: 1px solid #eee;
+}
+
+#logo{
+  width: 100px;
 }
 
 footer {
