--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<header>
-			<img id="logo" src="logo.svg" alt="It's home">
+			<img src="{{site.baseurl}}/assets/logo/logo.svg" id="logo">
 			{% include nav.html %}
 		</header>
 			{{content}}
