--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<header>
-			<img src="{{site.baseurl}}/assets/logo/logo.svg" id="logo">
+			<a href="{{site.baseurl}}/index.html"><img src="{{site.baseurl}}/assets/logo/logo.svg" id="logo"></a>
 			{% include nav.html %}
 		</header>
 			{{content}}
