Fixed footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer>
 	<nav>
 		<ul>
-		 	<li><a href="#">instgram</a></li>
+		 	<li><a href="https://www.instagram.com/guidedfantasy/">instgram</a></li>
 		 	/
-		 	<li><a href="#">twitter</a></li>
+		 	<li><a href="https://twitter.com/guidedfantasy">twitter</a></li>
 		 	/
-		 	<li><a href="#">linkedin</a></li>
+		 	<li><a href="https://in.linkedin.com/in/abdulraoofb">linkedin</a></li>
 		 </ul>
 			<span>&copy;2016 abdul raoof</span>
 	 </nav>
