--- a/css/main.scss
+++ b/css/main.scss
@@ -118,6 +118,9 @@ footer {
   nav {
     ul {
       float: right;
+      @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
+        float: none;
+      }
       li{
         padding: 0;
         a{
