--- a/css/main.scss
+++ b/css/main.scss
@@ -109,6 +109,9 @@ header {
 
 footer {
   margin: 3em 0 1.5em 0;
+  @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
+    margin-top: 1.5em;
+  }
   border-top: 1px solid #eee;
   color: #666;
   span {
@@ -120,6 +123,7 @@ footer {
       float: right;
       @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
         float: none;
+        padding-bottom: .75em;
       }
       li{
         padding: 0;
