--- a/css/main.scss
+++ b/css/main.scss
@@ -123,7 +123,7 @@ footer {
       float: right;
       @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
         float: none;
-        padding-bottom: .75em;
+        margin-bottom: 1.5em;
       }
       li{
         padding: 0;
