--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
 	<ul>
-		<li><a href="{{site.baseurl}}/writings.html">Writings</a></li>
+		<li><a href="{{site.baseurl}}/journal.html">Journal</a></li>
 		<li><a href="{{site.baseurl}}/bio.html">Bio</a></li>
 		<li><a href="{{site.baseurl}}/works.html">Works</a></li>
 	</ul>
