--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,9 @@
 <nav>
-	<ul>
-		<li><a href="{{site.baseurl}}/journal.html">Journal</a></li>
-		<li><a href="{{site.baseurl}}/bio.html">Bio</a></li>
-		<li><a href="{{site.baseurl}}/works.html">Works</a></li>
+	<ul class="{% if page.url == '/' %}home-nav{% endif %}">
+		<li><a href="{{site.baseurl}}/">Home</a></li>
+		<li><a href="{{site.baseurl}}/journal">Journal</a></li>
+		<li><a href="{{site.baseurl}}/bio">Bio</a></li>
+		<li><a href="{{site.baseurl}}/works">Works</a></li>
 	</ul>
+</nav>	
+
