--- a/css/main.scss
+++ b/css/main.scss
@@ -149,13 +149,13 @@ footer {
 
 
 .hero-para{
-  // h4 {
-  //   font-family: $secondary-font;
-  // }
   p {
     font-size: 1.236em;
     margin-bottom: .6em;
     line-height: 1.5;
+    @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
+      font-size: 1.15em
+    }
   }
 }
 
