--- a/css/main.scss
+++ b/css/main.scss
@@ -1,26 +1,30 @@
 ---
 ---
-/*Author: abdul raoof*/
 
-/* Fonts */
+//Author: abdul raoof
+
+// Imports 
 @import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700|Merriweather:400,400i,700');
+@import 'grid';
 
-/* Variables */
+// Variables 
 
 $primary-font: 'Merriweather', serif ;
 $secondary-font: 'Merriweather Sans', sans-serif;
 $type-color: #333;
 $break-small: 480px;
-// $primary-color: rgba(4,99,128,1);
 $primary-color: rgba(52,152,219,1);
-
 $secondary-color: rgba(25,52,65,1);
 
-
-
-@import 'grid';
-
-/* Typography */
+// mixins 
+@mixin type-style($size, $transform, $spacing, $weight, $color){
+  font-size: $size;
+  text-transform: $transform;
+  font-family: $secondary-font;
+  letter-spacing: $spacing;
+  font-weight: $weight;
+  color: $color;
+}
 
 html {font-size: 1em;}
 
@@ -31,6 +35,8 @@ body {
   line-height: 1.45;
   color: $type-color;
 }
+
+// Typography 
 
 h1, h2, h3, h4 , h5{
   margin: 1.414em 0 0.5em;
@@ -53,24 +59,26 @@ h5 {
   margin: 2em 0 .75em;
 }
 
+// paragraph styles 
 p {
   font-size: 1em;
   margin-bottom: 1.2em;
 }
 
-@mixin type-style($size, $transform, $spacing, $weight, $color){
-  font-size: $size;
-  text-transform: $transform;
-  font-family: $secondary-font;
-  letter-spacing: $spacing;
-  font-weight: $weight;
-  color: $color;
+// leading paragraph 
+.lead {
+    font-size: 1.236em;
+    margin-bottom: .6em;
+    line-height: 1.5;
+    color: $secondary-color;
+    @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
+      font-size: 1.15em
+    }
 }
 
 small {
   @include type-style(0.618em, uppercase, 1px, 600,#555)
 }
-
 
 a {
   text-decoration: none;
@@ -82,10 +90,37 @@ a {
   }
 }
 
+// unordered list styles 
+ul {
+  padding: 0px 0 1.2em 0;
+  list-style-type: circle;
+  li{
+    padding-bottom: 8px;
+    padding-left: 8px;
+  }
+}
+// image styles 
+img {
+  max-width: 100%;
+}
+
+.article-img {
+  margin: 1em 0 2em 0;
+  border: 1px solid #eee;
+}
+
+// emphasis styles 
+em {
+  font-weight: 600;
+}
+
+
+// page navigation 
 nav{
   font-family: $secondary-font;
   padding: 3em 0 .75em 0;
   ul{
+    padding: 0;
     li {
       display: inline-block;
       padding: 0 .75em 0 0;
@@ -98,7 +133,6 @@ nav{
       }
     }
   }
-
 }
 
 .home-nav{
@@ -107,7 +141,6 @@ nav{
       display: none;
       padding: 0;
     }
-
    } 
 }
 
@@ -121,6 +154,7 @@ header {
   height: 64px;
 }
 
+// footer section 
 footer {
   margin: 3em 0 1.5em 0;
   @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
@@ -135,6 +169,7 @@ footer {
   nav {
     ul {
       float: right;
+      padding: 0;
       @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
         float: none;
         margin-bottom: 1.5em;
@@ -147,39 +182,5 @@ footer {
         }
       }
     }
-  }
-}
-
-
-.hero-para{
-  p {
-    font-size: 1.236em;
-    margin-bottom: .6em;
-    line-height: 1.5;
-    @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
-      font-size: 1.15em
-    }
-  }
-}
-
-img {
-  max-width: 100%;
-}
-
-img.flow-img {
-  margin: 1em 0 2em 0;
-  border-bottom: 1px solid #eee;
-}
-
-em {
-  font-weight: 600;
-}
-
-ul.flow {
-  padding: 0px 0 1.2em 0;
-  list-style-type: circle;
-  li{
-    padding-bottom: 8px;
-    padding-left: 8px;
   }
 }
