--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@
 
 $primary-font: 'Merriweather', serif ;
 $secondary-font: 'Merriweather Sans', sans-serif;
-$type-color: #333;
+$type-color: rgba(0,0,0,0.8);
 $break-small: 480px;
 $primary-color: rgba(52,152,219,1);
 $secondary-color: rgba(25,52,65,1);
@@ -39,7 +39,7 @@ body {
 // Typography 
 
 h1, h2, h3, h4 , h5{
-  margin: 1.414em 0 0.5em;
+  margin: 1.414em 0 0.2em;
   font-weight: 600;
   line-height: 1.2;
   font-family: $secondary-font;
@@ -52,17 +52,20 @@ h2 {font-size: 2.618em;}
 
 h3 {font-size: 1.618em;}
 
-h4 {font-size: 1.2em;}
+h4 {
+  font-size: 1.2em;
+  line-height: 1.4;
+}
 
 h5 {
   font-size: 1em;
-  margin: 2em 0 .75em;
 }
 
 // paragraph styles 
 p {
   font-size: 1em;
-  margin-bottom: 1.2em;
+  margin-bottom: 1em;
+  line-height: 1.6;
 }
 
 // leading paragraph 
@@ -70,14 +73,19 @@ p {
     font-size: 1.236em;
     margin-bottom: .6em;
     line-height: 1.5;
-    color: $secondary-color;
     @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
       font-size: 1.15em
     }
 }
 
-small {
+small,figcaption {
   @include type-style(0.618em, uppercase, 1px, 600,#555)
+}
+
+figcaption {
+  text-align: center;
+  color: rgba(0,0,0,0.6);
+  margin-top: .5em;
 }
 
 a {
@@ -92,7 +100,7 @@ a {
 
 // unordered list styles 
 ul {
-  padding: 0px 0 1.2em 0;
+  margin-bottom: 1em;
   list-style-type: circle;
   li{
     padding-bottom: 8px;
@@ -100,13 +108,20 @@ ul {
   }
 }
 // image styles 
+
 img {
   max-width: 100%;
 }
 
 .article-img {
   margin: 1em 0 2em 0;
-  border: 1px solid #eee;
+  img{
+     border: 1px solid #eee; 
+   }
+   border-bottom: 1px solid #eee;
+   figcaption{
+      margin-bottom: 2em;
+   }
 }
 
 // emphasis styles 
@@ -114,13 +129,16 @@ em {
   font-weight: 600;
 }
 
+section {
+  margin-bottom: 2.5em;
+}
 
 // page navigation 
 nav{
   font-family: $secondary-font;
   padding: 3em 0 .75em 0;
   ul{
-    padding: 0;
+    margin-bottom: 0;
     li {
       display: inline-block;
       padding: 0 .75em 0 0;
