--- a/css/main.scss
+++ b/css/main.scss
@@ -114,6 +114,11 @@ img {
 }
 
 .article-img {
+  @media only screen and (min-device-width : 800px) and (max-device-width : 1440px){
+    position: relative;
+    width: 70vw;
+    left: calc(-35vw + 50%);
+  }
   margin: 1em 0 2em 0;
   img{
      border: 1px solid #eee; 
