Fixed case study

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav role="navigation">
 	<ul class="{% if page.url == '/' %}home-nav{% endif %}">
 		<li><a href="{{site.baseurl}}/">Home</a></li>
 		<li><a href="{{site.baseurl}}/journal">Journal</a></li>
