added analytics case study

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 		<li><a href="{{site.baseurl}}/">Home</a></li>
 		<li><a href="{{site.baseurl}}/journal">Journal</a></li>
 		<li><a href="{{site.baseurl}}/bio">Bio</a></li>
-		<li><a href="{{site.baseurl}}/works">Works</a></li>
+		<!-- <li><a href="{{site.baseurl}}/works">Works</a></li> -->
 	</ul>
 </nav>	
 
