added quotes section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <nav role="navigation">
 	<ul class="{% if page.url == '/' %}home-nav{% endif %}">
 		<li><a href="{{site.baseurl}}/">Home</a></li>
-		<li><a href="{{site.baseurl}}/journal">Journal</a></li>
+<!-- 		<li><a href="{{site.baseurl}}/journal">Journal</a></li> -->
+<li><a href="{{site.baseurl}}/quotes">Quotes</a></li>
 		<li><a href="{{site.baseurl}}/bio">Bio</a></li>
 		<!-- <li><a href="{{site.baseurl}}/works">Works</a></li> -->
 	</ul>
