--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 		</article>
 		{% include footer.html %}
 	</div>
+	<script   src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>
 </body>
 </html>
