--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 //Author: abdul raoof
 
 // Imports 
-@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700|Merriweather:400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700|Merriweather:300,300i,400,400i,700');
 @import 'grid';
 
 // Variables 
@@ -246,3 +246,25 @@ footer {
   font-weight: 400;
   font-size: .9em;
 }
+
+//quotes
+.quote {
+}
+blockquote{
+  margin: 2em 0 2em 0;
+  font-weight: 400;
+  font-size: .9em;
+  p {
+    margin-bottom: 0;
+  }
+  span {
+    font-weight: 300;
+  }
+  .author{
+    font-weight: 300;
+    font-style: italic;
+    text-align: left;
+    margin: .2em 0 0.5em 0;
+  }
+}
+
