--- a/css/main.scss
+++ b/css/main.scss
@@ -39,21 +39,26 @@ body {
 // Typography 
 
 h1, h2, h3, h4 , h5{
-  margin: 1.414em 0 0.2em;
-  font-weight: 600;
+  margin: 1em 0 0.2em;
+  font-weight: 400;
   line-height: 1.2;
   font-family: $secondary-font;
-  text-transform: uppercase;
+}
+h2, h3, h4 , h5{
+  font-weight: 600;
 }
 
-h1 { font-size: 4.236em;}
+h1 { 
+    font-size: 2.618em;
+    text-transform: uppercase;
+}
 
-h2 {font-size: 2.618em;}
+h2 {font-size: 1.618em;}
 
-h3 {font-size: 1.618em;}
+h3 {font-size: 1.2em;}
 
 h4 {
-  font-size: 1.2em;
+  font-size: 1em;
   line-height: 1.4;
 }
 
@@ -67,7 +72,7 @@ h6{
 
 // paragraph styles 
 p {
-  font-size: 1em;
+  font-size: 1.1em;
   margin-bottom: 1em;
   line-height: 1.6;
 }
@@ -110,9 +115,15 @@ a {
 ul {
   margin-bottom: 1em;
   list-style-type: circle;
+  &.post-list {
+      list-style: none;
+      font-size: 1.2em;
+      a {
+          text-decoration: underline;
+      }
+  }
   li{
     padding-bottom: 8px;
-//    padding-left: 8px;
   }
 }
 
@@ -183,6 +194,7 @@ nav{
         @extend small;
         font-size: 0.8em;
       }
+        
     }
   }
 }
@@ -248,21 +260,19 @@ footer {
 }
 
 //quotes
-.quote {
-}
 blockquote{
   margin: 2em 0 2em 0;
   font-weight: 400;
-  font-size: .9em;
   p {
     margin-bottom: 0;
+    font-style: italic;
   }
   span {
     font-weight: 300;
   }
   .author{
     font-weight: 300;
-    font-style: italic;
+    font-style: normal;
     text-align: left;
     margin: .2em 0 0.5em 0;
   }
