--- a/css/main.scss
+++ b/css/main.scss
@@ -96,7 +96,7 @@ p {
   margin-bottom: 1em;
   line-height: 1.6;
   @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
-      font-size: 0.88em
+      font-size: 0.99em;
   }
 }
 
