--- a/css/main.scss
+++ b/css/main.scss
@@ -96,7 +96,7 @@ p {
   margin-bottom: 1em;
   line-height: 1.6;
   @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
-      font-size: 0.99em;
+      font-size: 1.05em;
   }
 }
 
@@ -140,7 +140,7 @@ ul {
   list-style-type: circle;
   &.post-list {
       list-style: none;
-      font-size: 1.2em;
+//      font-size: 1.2em;
       a {
           text-decoration: underline;
       }
