--- a/css/main.scss
+++ b/css/main.scss
@@ -67,6 +67,7 @@ h3 {
     font-weight: 700;
     @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
       font-size: 0.96em;
+      text-transform: uppercase;
     }
 }
 
