--- a/css/main.scss
+++ b/css/main.scss
@@ -97,7 +97,7 @@ p {
   margin-bottom: 1em;
   line-height: 1.6;
   @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
-      font-size: .99em;
+      font-size: .88em;
   }
 }
 
@@ -138,10 +138,10 @@ a {
 // unordered list styles 
 ul {
   margin-bottom: 1em;
+  margin-left: 1.2em;
   list-style-type: circle;
   &.post-list {
       list-style: none;
-//      font-size: 1.2em;
       a {
           text-decoration: underline;
       }
