--- a/css/main.scss
+++ b/css/main.scss
@@ -108,6 +108,7 @@ p {
     line-height: 1.5;
     @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
       font-size: 0.988em;
+      font-weight: 600;
     }
 }
 
