--- a/css/main.scss
+++ b/css/main.scss
@@ -43,9 +43,6 @@ h1, h2, h3, h4 , h5{
   line-height: 1.2;
   font-family: $primary-font;
 }
-h2, h3, h4 , h5{
-  font-weight: 400;
-}
 
 h1 { 
     font-size: 2.618em;
@@ -95,9 +92,9 @@ h6{
 p {
   font-size: 1.1em;
   margin-bottom: 1em;
-  line-height: 1.6;
+  line-height: 1.5;
   @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
-      font-size: .88em;
+      font-size: 0.88em;
   }
 }
 
@@ -105,10 +102,10 @@ p {
 .lead {
     font-size: 1.236em;
     margin-bottom: .6em;
-    line-height: 1.5;
+    line-height: 1.6;
+    font-style: italic;
     @media only screen and (min-device-width : 320px) and (max-device-width : 800px){
       font-size: 0.988em;
-      font-weight: 600;
     }
 }
 
@@ -139,7 +136,6 @@ a {
 // unordered list styles 
 ul {
   margin-bottom: 1em;
-  margin-left: 1.2em;
   list-style-type: circle;
   &.post-list {
       list-style: none;
@@ -194,6 +190,7 @@ video {
   width: 100%;
   margin: 0 auto;
 }
+
 // emphasis styles 
 em {
   font-weight: 600;
@@ -209,6 +206,7 @@ nav{
   padding: 3em 0 .75em 0;
   ul{
     margin-bottom: 0;
+    margin-left: 0;
     li {
       display: inline-block;
       padding: 0 .75em 0 0;
@@ -304,5 +302,10 @@ blockquote{
     text-align: left;
     margin: .2em 0 0.5em 0;
   }
+}
+
+//helper classes
+.margin-left-zero {
+    margin-left: 0;
 }
 
