--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <nav role="navigation">
-	<ul class="{% if page.url == '/' %}home-nav{% endif %}">
+<!--	<ul class="{% if page.url == '/' %}home-nav{% endif %}">-->
+    <ul>
 		<li><a href="{{site.baseurl}}/">Home</a></li>
-<!-- 		<li><a href="{{site.baseurl}}/journal">Journal</a></li> -->
-<li><a href="{{site.baseurl}}/quotes">Quotes</a></li>
-		<li><a href="{{site.baseurl}}/bio">Bio</a></li>
-		<!-- <li><a href="{{site.baseurl}}/works">Works</a></li> -->
+ 		<li><a href="{{site.baseurl}}/_pages/journal.html">Journal</a></li> 
+<li><a href="{{site.baseurl}}/_pages/quotes.html">Quotes</a></li>
+		<li><a href="{{site.baseurl}}/_pages/bio.html">Bio</a></li>
 	</ul>
 </nav>	
 
